cmake_minimum_required(VERSION 3.28)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCode main.cpp
        Problems/TwoSum.h
        Problems/LinkedLists/AddTwoNumbers.h
        Problems/Search.h
        Problems/SingleNumber.h
        Problems/MaximumSubArray.h
        Problems/MajorityElement.h
        Problems/Pow.h
        Problems/BestBuySellStock.h
        Problems/WaterContainer.h
        Problems/ProductOfArray.h
        Problems/PeakIndexInMountain.h
        Problems/Fibonacci.h
        Problems/SingleElementInSortedArray.h
        Problems/Sorting.h
        Problems/MergeSortedArray.h
        Problems/NextPermutation.h
        Problems/StringManipulation.h
        Problems/Trees/BinarySearchTree.h
        Problems/Array2D.h
        Problems/FindMissingAndRepeatingValues.h
        Problems/FindDuplicateNumber.h
        Problems/ThreeSum.h
        Problems/SubarraySum.h
        Problems/Subsets.h
        Problems/Trees/AVLTrees.h
        Problems/graphs/Graphs.h
        Problems/graphs/AllPathsGraph.h
        Problems/graphs/RottingOranges.h
        Problems/graphs/NumberOfIslands.h
        Problems/graphs/CyclicDetection.h
        Problems/graphs/TopologicalSort.h
        Problems/graphs/CourseSchedule.h
        Problems/graphs/DijkstraAlgorithm.h
        Problems/graphs/BellmanFordAlgorithm.h
        Problems/graphs/CheapestFlightsWithKStops.h
        Problems/graphs/Practice.h
        Problems/graphs/FloodFill.h
        Problems/graphs/MinimumSpanningTree.h
        Problems/Permutations.h
        Problems/CombinationSum.h
        Problems/PalindromePartitioning.h
        Problems/MergeSort.h
        Problems/QuickSort.h
        Problems/LinkedLists/LinkedList.h
        Problems/LinkedLists/ReverseLinkedList.h
        Problems/LinkedLists/MiddleOfLinkedList.h
        Problems/LinkedLists/CycleLinkedList.h
        Problems/LinkedLists/MergeTwoSortedLists.h
        Problems/LinkedLists/CopyListWithRandomPointer.h
        Problems/Trees/BinaryTrees.h
        Problems/graphs/Practice2.h
        Problems/NQueens.h
        Problems/SudokuSolver.h
        Problems/graphs/RatInMaze.h
        Problems/CountInversions.h
        Problems/KnightsTour.h
        Problems/LinkedLists/DoublyLinkedList.h
        Problems/LinkedLists/CircularLinkedList.h
        Problems/LinkedLists/FlattenMultiLevelDoublyLinkedList.h
        Problems/Stacks/Stack.h
        Problems/Stacks/ValidParenthesis.h
        Problems/Stacks/StockSpanner.h
        Problems/Stacks/NextGreaterElement.h
        Problems/Stacks/MinStack.h
        Problems/Stacks/LargestRectangleInHistogram.h)
